@@ -386,6 +386,7 @@ void EntryView::setXSLTFile(const QString& file_) {
   m_handler->addStringParam("fgcolor",  Config::templateTextColor(type).name().toLatin1());
   m_handler->addStringParam("color1",   Config::templateHighlightedTextColor(type).name().toLatin1());
   m_handler->addStringParam("color2",   Config::templateHighlightedBaseColor(type).name().toLatin1());
+  m_handler->addStringParam("linkcolor",Config::templateLinkColor(type).name().toLatin1());
 
   if(Data::Document::self()->allImagesOnDisk()) {
     m_handler->addStringParam("imgdir", QUrl::fromLocalFile(ImageFactory::imageDir()).toEncoded());
@@ -502,6 +503,7 @@ void EntryView::setXSLTOptions(const Tellico::StyleOptions& opt_) {
   m_handler->addStringParam("fgcolor",  opt_.textColor.name().toLatin1());
   m_handler->addStringParam("color1",   opt_.highlightedTextColor.name().toLatin1());
   m_handler->addStringParam("color2",   opt_.highlightedBaseColor.name().toLatin1());
+  m_handler->addStringParam("linkcolor",opt_.linkColor.name().toLatin1());
   m_handler->addStringParam("imgdir",   QFile::encodeName(opt_.imgDir));
 }
 
