@@ -29,6 +29,9 @@
     margin-left:15%;
     margin-right:15%;
   }
+  a {
+    color: $LINKCOLOR$;
+  }
   div#content {
     padding-left: 1%;
     padding-right: 1%;
