@@ -1,3 +1,7 @@
+2023-03-11  Robby Stephenson  <robby@periapsis.org>
+
+	* Added config option for link color (Bug 467150).
+
 2023-03-09  Robby Stephenson  <robby@periapsis.org>
 
 	* Added support for importing EPub data on drag/drop (Bug 450192).
